<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/imageDetail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/pic_artwork"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:layout_marginRight="16dp"
        >
        <TextView
            android:id="@+id/tittleDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artwork_meeting_room"
            android:textColor="@color/colorTextPrimary"
            style="@style/TextAppearance.AppCompat.Title"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTextPrimary"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/txt_facility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facility_"
            android:textColor="@color/colorTextSecondary"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/facilityDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_monitor_32_inch"
            android:textColor="@color/colorTextSecondary"
            style="@style/TextAppearance.AppCompat.Subhead"
            />




    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTextPrimary"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/priceDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/rp_500_000_days"
            style="@style/Base.TextAppearance.AppCompat.Large"
            />

    </LinearLayout>








</LinearLayout>