<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:background="#919191"
            android:padding="16dp"
            >
            <TextView
                android:id="@+id/text_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meeting_room"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                />


        </LinearLayout>

        <Button
            android:id="@+id/btnGenerate"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            />

        <ImageView
            android:id="@+id/qrCode"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/btnExit"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:background="@android:color/holo_red_light"
            android:textColor="@android:color/white"
            />


    </LinearLayout>







</ScrollView>